# solus-hardware-config

./: .gitignore  Makefile.am  README.md  configure.ac  gen_docs.sh  meson.build  mkrelease.sh  update_format.sh
blacklist/: Makefile.am  meson.build
coredump/: 00-manager-coredump-solus.conf  meson.build
cpu-on-demand/: main.c  meson.build  on-demand-cpupower-switch  on-demand-cpupower.service  on-demand-cpupower.service.in
cpu-powersave/: cpu-powersave.service.in  main.c  meson.build
man/: cpu-powersave.1  cpu-powersave.1.html  cpu-powersave.1.md  meson.build  on-demand-cpupower-switch.1  on-demand-cpupower-switch.1.html  on-demand-cpupower-switch.1.md
modprobe/: meson.build
options/: 20-iwlwifi.conf  20-rtl8723be.conf  Makefile.am  meson.build
sysctl/: 60-solus-coredump.conf  Makefile.am  meson.build
systemd/: 20-solus.conf  Makefile.am  meson.build  on-demand-cpupower-switch  on-demand-cpupower.service
tweaks/: 20-solus.conf  60-hdd-scheduler.rules  meson.build
udev/: Makefile.am  meson.build
xorg/: 20-cyborg-rat-five.conf  20-cyborg-rat.conf  20-g600.conf  Makefile.am  meson.build
